--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 Django>=1.4.10
--e git+http://github.com/laborautonomo/django-la-tags.git@v0.1.0#egg=django-la-tags
+-e git+http://github.com/laborautonomo/django-la-tags#egg=django-la-tags
 django-admin-sortable==1.7.3
 django-ckeditor-updated==4.4.0
