--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
 Django>=1.4.10
 django-admin-sortable==1.7.3
 django-ckeditor-updated==4.4.0
+-e git+http://github.com/laborautonomo/django-la-tags#egg=django-la-tags
