--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 Django>=1.4.10
 django-admin-sortable==1.7.3
 django-ckeditor-updated==4.4.0
--e git://github.com/laborautonomo/django-la-tags.git@4ea8e416933bb56e49f43dffcb8e2990c0e860a6#egg=django_la_tags-dev
+git+git://github.com/laborautonomo/django-la-tags.git@4ea8e416933bb56e49f43dffcb8e2990c0e860a6#egg=django_la_tags-dev
